<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/container"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_marginBottom="5dp">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/voice_input_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/voice_input_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/text_input_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_voice_input"
            android:layout_width="@dimen/btn_voice_input"
            android:layout_height="@dimen/btn_voice_input"
            android:layout_centerInParent="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/btn_voice_input"
            android:contentDescription="@string/voice_input_content_description"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="30dp"
            app:icon="@drawable/ic_baseline_mic_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/mic_primary" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_settings"
            android:layout_width="@dimen/tapbar_second_btn"
            android:layout_height="@dimen/tapbar_second_btn"
            android:layout_centerVertical="true"
            android:layout_marginEnd="34dp"
            android:layout_toStartOf="@id/btn_voice_input"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/btn_settings_content_description"
            android:src="@drawable/ic_baseline_settings_24"
            android:tint="@color/tapbar_second_btn" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_keyboard"
            android:layout_width="@dimen/tapbar_second_btn"
            android:layout_height="@dimen/tapbar_second_btn"
            android:layout_centerVertical="true"
            android:layout_marginStart="34dp"
            android:layout_toEndOf="@id/btn_voice_input"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/btn_keyboard_input_content_description"
            android:src="@drawable/ic_baseline_keyboard_24"
            android:tint="@color/tapbar_second_btn" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_input_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_attach"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/btn_add_attachment_content_description"
            android:src="@drawable/ic_baseline_attach_file_24"
            android:tint="@color/mic_primary"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_switch_to_voice"
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@id/btn_attach"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/btn_add_attachment_content_description"
            android:src="@drawable/ic_baseline_mic_24"
            android:tint="@color/mic_primary"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_send_msg"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_send_24"
            android:tint="@color/btn_send_text" />

        <EditText
            android:id="@+id/msgInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_send_msg"
            android:layout_toEndOf="@id/btn_switch_to_voice"
            android:autofillHints="@string/btn_message_input_content_description"
            android:hint="@string/btn_message_input_content_description"
            android:imeOptions="actionDone|actionGo"
            android:inputType="textAutoCorrect|textAutoComplete"
            android:singleLine="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
